[gd_scene load_steps=2 format=3 uid="uid://dwbeayao0lik6"]

[ext_resource type="Script" path="res://scenes/component/dash_component.gd" id="1_52ec7"]

[node name="DashComponent" type="Node2D"]
script = ExtResource("1_52ec7")

[node name="DurationTimer" type="Timer" parent="."]
one_shot = true

[node name="GhostTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true
